terraform/common/target-group-phpbb.tf
# Target Group for phpBB ECS service
resource "aws_lb_target_group" "phpbb" {
  name        = "${var.project_name}-phpbb-ecs-tg"
  port        = 80
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main.id
  target_type = "ip"

  health_check {
    enabled             = true
    healthy_threshold   = 2
    interval            = 30
    matcher             = "200,301,302"
    path                = "/"
    port                = "traffic-port"
    protocol            = "HTTP"
    timeout             = 5
    unhealthy_threshold = 3
  }

  tags = {
    Name = "${var.project_name}-phpbb-ecs-tg"
  }
}
